--- a/src/components/Accounts/login.css
+++ b/src/components/Accounts/login.css
@@ -1,4 +1,11 @@
-.login-form {
-    width: 50%;
-    height: 200px;
+input[type=text], input[type=password] {
+    width: 100%;
+    height: 50%;
+    padding: 10px;
+    margin: 10px;
+}
+
+.login-btn {
+    padding: 10px;
+    background: rgb(171, 211, 186);
 }
