--- a/src/components/Search/SearchBox.css
+++ b/src/components/Search/SearchBox.css
@@ -35,7 +35,7 @@
   border-radius: 3px;
 }
 
-input[type=text], textarea {
+input[type=text], input[type=password], textarea {
   -webkit-transition: all 0.30s ease-in-out;
   -moz-transition: all 0.30s ease-in-out;
   -ms-transition: all 0.30s ease-in-out;
@@ -46,7 +46,7 @@ input[type=text], textarea {
   border: 1px solid #e0e0e0;
 }
  
-input[type=text]:focus, textarea:focus {
+input[type=text]:focus, input[type=password]:focus, textarea:focus {
   box-shadow: 0 0 5px #e4a199;
   padding: 8px 0px 8px 10px;
   margin: 5px 1px 3px 0px;
