--- a/src/components/Accounts/login.css
+++ b/src/components/Accounts/login.css
@@ -1,3 +1,14 @@
+.login-container {
+    display: inline-flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    /* align-items: center; */
+    width: 400px;
+    height: 50%;
+    border: 3px solid rgb(171, 211, 186);
+    padding: 30px;
+    margin: 10px auto;
+}
 input[type=text], input[type=password] {
     width: 100%;
     height: 50%;
@@ -7,5 +18,16 @@ input[type=text], input[type=password] {
 
 .login-btn {
     padding: 10px;
+    margin: 10px;
     background: rgb(171, 211, 186);
 }
+
+.logo-img {
+    width: 200px;
+    height: 200px;
+    margin: 10px auto;
+}
+
+/* .logo-container {
+    margin: 10px 150px;
+} */
